# mputils

./: .pre-commit-config.yaml  .prospector.yml  README.md  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: code-quality.yml  test.yml
mputils/: __init__.py  actions.py  cli.py  multi.py  utils.py
tests/: multi_test.py  utils.py
