[tool.poetry]
name = "mputils"
version = "0.1.0"
description = "Multiprocessing move/copy"
authors = ["Panos Mavrogiorgos <pmav99@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.2"
pydantic = "^1.8.1"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
black = "^20.8b1"
reorder-python-imports = "^2.3.6"
mypy = "^0.800"
prospector = {version = "^1.3.1", extras = ["all"]}
pre-commit = "^2.11.1"

[tool.poetry.scripts]
mputils = 'mputils.cli:app'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 109
target-version = ['py38']

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra --verbose --showlocals --tb=short --cov=mputils --cov-report term-missing"
testpaths = [
    "tests",
]
